// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Button can be a submit button 1`] = `
<button
  className="mdc-button"
  disabled={false}
  id={null}
  onClick={null}
  type="submit"
>
  
</button>
`;

exports[`components/Button can be compact 1`] = `
<button
  className="mdc-button mdc-button--compact"
  disabled={false}
  id={null}
  onClick={null}
  type="button"
>
  
</button>
`;

exports[`components/Button can be dense 1`] = `
<button
  className="mdc-button mdc-button--dense"
  disabled={false}
  id={null}
  onClick={null}
  type="button"
>
  
</button>
`;

exports[`components/Button can be disabled 1`] = `
<button
  className="mdc-button"
  disabled={true}
  id={null}
  onClick={null}
  type="button"
>
  
  disabled button
</button>
`;

exports[`components/Button can be raised 1`] = `
<button
  className="mdc-button mdc-button--raised"
  disabled={false}
  id={null}
  onClick={null}
  type="button"
>
  
</button>
`;

exports[`components/Button can be rippled 1`] = `
<button
  className="mdc-button"
  disabled={false}
  id={null}
  onClick={null}
  type="button"
>
  
</button>
`;

exports[`components/Button can be stroked 1`] = `
<button
  className="mdc-button mdc-button--stroked"
  disabled={false}
  id={null}
  onClick={null}
  type="button"
>
  
</button>
`;

exports[`components/Button can be unelevated 1`] = `
<button
  className="mdc-button mdc-button--unelevated"
  disabled={false}
  id={null}
  onClick={null}
  type="button"
>
  
</button>
`;

exports[`components/Button can have children 1`] = `
<button
  className="mdc-button"
  disabled={false}
  id={null}
  onClick={null}
  type="button"
>
  
  Children are here!
</button>
`;

exports[`components/Button can render a button with id 1`] = `
<button
  className="mdc-button"
  disabled={false}
  id="button"
  onClick={null}
  type="button"
>
  
</button>
`;

exports[`components/Button can render a link if supplied 1`] = `
<a
  className="mdc-button"
  href="#"
  id={null}
>
  
</a>
`;

exports[`components/Button can render a link with id 1`] = `
<a
  className="mdc-button"
  href="#"
  id="link"
>
  
</a>
`;

exports[`components/Button can render an icon if supplied 1`] = `
<button
  className="mdc-button"
  disabled={false}
  id={null}
  onClick={null}
  type="button"
>
  <i
    className="mdc-button__icon material-icons"
  >
    favorite
  </i>
</button>
`;

exports[`components/Button renders a secondary button 1`] = `
<button
  className="mdc-button secondary-filled-button"
  disabled={false}
  id={null}
  onClick={null}
  type="button"
>
  
</button>
`;
